remove code duplication (by default when overriding a profile, the properties are merged): http://www.sonatype.com/people/2011/01/maven-how-to-merging-plugin-configuration-in-complex-projects/