@@ -1665,37 +1665,12 @@
                   <groupId>org.apache.maven.plugins</groupId>
                   <artifactId>maven-surefire-plugin</artifactId>
                   <configuration>
-                     <parallel>tests</parallel>
-                     <forkCount>1</forkCount>
-                     <reuseForks>true</reuseForks>
-                     <threadCount>${infinispan.test.parallel.threads}</threadCount>
-                     <groups>${defaultTestGroup}</groups>
                      <systemProperties>
-                        <property>
-                           <name>infinispan.test.jgroups.protocol</name>
-                           <value>${infinispan.test.jgroups.protocol}</value>
-                        </property>
-                        <property>
-                           <name>jgroups.bind_addr</name>
-                           <value>127.0.0.1</value>
-                        </property>
-                        <property>
-                           <name>java.net.preferIPv4Stack</name>
-                           <value>true</value>
-                        </property>
                         <property>
                            <name>log4j.configuration</name>
                            <value>log4j-trace.xml</value>
                         </property>
                      </systemProperties>
-                     <trimStackTrace>false</trimStackTrace>
-                     <properties>
-                        <property>
-                           <name>listener</name>
-                           <value>${testNGListener}</value>
-                        </property>
-                     </properties>
-                     <argLine>-Xmx1024m -XX:MaxPermSize=1024m</argLine>
                   </configuration>
                </plugin>
             </plugins>
